# GDPico64

./: .gitmodules  CMakeLists.txt  README.md  cas.c  cas.h  cas_io.S  chardev.h  gdp.c  gdp.h  gdp.pio  gdp_char.c  gdp_char.h  gdp_io.S  gdp_line.c  gdp_line.h  gpio_def.h  helper.c  key.h  key_io.S  ndrnkc.c  par_bus.c  par_bus.h  par_bus.pio  parport.S  ps2key.c  ps2key.h  ps2key.pio  stdio_dev.c  stdio_dev.h  xmodem_pico.c  xmodem_pico.h
Config/: FreeRTOSConfig.h
hardware/BUS_Rebuild/: BUS_Rebuild.kicad_pcb  BUS_Rebuild.kicad_prl  BUS_Rebuild.kicad_pro  BUS_Rebuild.kicad_sch  README.md
hardware/BUS_Rebuild/Gerber/: BUS_Rebuild-B_Cu.gbr  BUS_Rebuild-B_Mask.gbr  BUS_Rebuild-B_Paste.gbr  BUS_Rebuild-B_Silkscreen.gbr  BUS_Rebuild-Edge_Cuts.gbr  BUS_Rebuild-F_Cu.gbr  BUS_Rebuild-F_Mask.gbr  BUS_Rebuild-F_Paste.gbr  BUS_Rebuild-F_Silkscreen.gbr  BUS_Rebuild-NPTH.drl  BUS_Rebuild-PTH.drl  BUS_Rebuild-job.gbrjob
hardware/GDPico64/: GDPico64.kicad_pcb  GDPico64.kicad_prl  GDPico64.kicad_pro  GDPico64.kicad_sch  README.md  fp-info-cache  fp-lib-table  sym-lib-table
hardware/GDPico64/Gerber/: GDPico64-B_Cu.gbr  GDPico64-B_Mask.gbr  GDPico64-B_Paste.gbr  GDPico64-B_Silkscreen.gbr  GDPico64-Edge_Cuts.gbr  GDPico64-F_Cu.gbr  GDPico64-F_Mask.gbr  GDPico64-F_Paste.gbr  GDPico64-F_Silkscreen.gbr  GDPico64-NPTH.drl  GDPico64-PTH.drl  GDPico64-job.gbrjob
hardware/GDPico64/MyLib.pretty/: KMDGX6SBS.kicad_mod  LevelShiftMod.kicad_mod  New_Library.bak  New_Library.kicad_sym
hardware/SBC2_Rebuild/: README.md  RetroChips.bak  RetroChips.kicad_sym  SBC2_Rebuild.kicad_pcb  SBC2_Rebuild.kicad_prl  SBC2_Rebuild.kicad_pro  SBC2_Rebuild.kicad_sch  sym-lib-table
hardware/SBC2_Rebuild/Gerber/: SBC2_Rebuild-B_Cu.gbr  SBC2_Rebuild-B_Mask.gbr  SBC2_Rebuild-B_Silkscreen.gbr  SBC2_Rebuild-Edge_Cuts.gbr  SBC2_Rebuild-F_Cu.gbr  SBC2_Rebuild-F_Mask.gbr  (+4 more)
